Add extra migration scripts and documentation

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
           <url>jdbc:postgresql://localhost:5432/test</url>
           <user>postgres</user>
           <password>example</password>
+          <baselineVersion>2.0</baselineVersion>
         </configuration>
         <dependencies>
           <dependency>
